Actions
Bug #17672
closedRactor stdio does not belong to the ractor
Bug #17672:
Ractor stdio does not belong to the ractor
Description
When compiling with RUBY_DEBUG, the following code crashes.
$ ./miniruby -W0 -e 'p Ractor.new {$stdout.itself}.take'
<OBJ_INFO:rb_ractor_confirm_belonging@../debug/ractor_core.h:336> 0x000000010bec2fa0 [0 U] T_FILE (IO)
-e:1: [BUG] rb_ractor_confirm_belonging object-ractor id:1, current-ractor id:2
ruby 3.1.0dev (2021-03-05T13:03:11Z master 182cde8dfb) [x86_64-darwin19]
Ractor local stdio objects don't belong to the ractor.
Updated by nobu (Nobuyoshi Nakada) over 5 years ago
- Description updated (diff)
Updated by nobu (Nobuyoshi Nakada) over 5 years ago
- Blocks Bug #17659: Ractor: can't call io/wait methods added
Updated by nobu (Nobuyoshi Nakada) over 5 years ago
- Status changed from Open to Closed
Applied in changeset git|b3c53a8a885be8f5cc2b712798b0d2741c488ce4.
Make Ractor stdio belonging to the Ractor [Bug #17672]
Defer making ractor stdio until ractor started.
Before ractor started, created objects belong to the caller ractor
instead of the created ractor.
Updated by naruse (Yui NARUSE) over 5 years ago
- Backport changed from 2.5: DONTNEED, 2.6: DONTNEED, 2.7: DONTNEED, 3.0: REQUIRED to 2.5: DONTNEED, 2.6: DONTNEED, 2.7: DONTNEED, 3.0: DONE
ruby_3_0 6f9e007729d53fdbc22e37e52129ea5aa2556d0e merged revision(s) b3c53a8a885be8f5cc2b712798b0d2741c488ce4.
Actions